Try to implement create comment

--- a/Week6/Day2/Blahgger/Blahgger/Views/Post/Details.cshtml
+++ b/Week6/Day2/Blahgger/Blahgger/Views/Post/Details.cshtml
@@ -38,6 +38,8 @@
 
     </dl>
 </div>
+@Html.ActionLink("Add Comment", "Create/"+ @Model.Post.Id, "Comment")
+
 <table class="table">
     <thead>
         <tr>
