--- a/Week6/Day3/CommunityShedMVC/CommunityShedMVC/Views/Account/Login.cshtml
+++ b/Week6/Day3/CommunityShedMVC/CommunityShedMVC/Views/Account/Login.cshtml
@@ -8,6 +8,7 @@
 
 @using (Html.BeginForm())
 {
+    @Html.ValidationSummary()
     <div>
         @Html.LabelFor(m => m.Email)
         @Html.TextBoxFor(m => m.Email)
