--- a/Week6/Day3/CommunityShedMVC/CommunityShedMVC/Views/Shared/_Layout.cshtml
+++ b/Week6/Day3/CommunityShedMVC/CommunityShedMVC/Views/Shared/_Layout.cshtml
@@ -18,11 +18,25 @@
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+
                 </ul>
+                @if (Request.IsAuthenticated)
+                {
+                    <div class="navbar-text navbar-right">
+                        <span>Welcome @User.Identity.Name </span>
+                        @using (Html.BeginForm("Logout", "Account", FormMethod.Post, new { @style = "display: inline" }))
+                        {
+                            <button class="btn btn-warning" type="submit">Logout</button>
+                        }
+                    </div>
+                }
+                
             </div>
+            
         </div>
     </div>
 
