--- a/Week6/Day3/CommunityShedMVC/CommunityShedMVC/Views/Shared/_Layout.cshtml
+++ b/Week6/Day3/CommunityShedMVC/CommunityShedMVC/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                 @if (Request.IsAuthenticated)
                 {
                     <div class="navbar-text navbar-right">
-                        <span>Welcome @User.Identity.Name </span>
+                        <span>Welcome @(((CommunityShedMVC.Security.CustomPrincipal)User).Person.FirstName) </span>
                         @using (Html.BeginForm("Logout", "Account", FormMethod.Post, new { @style = "display: inline" }))
                         {
                             <button class="btn btn-warning" type="submit">Logout</button>
