--- a/Week6/Day3/CommunityShedMVC/CommunityShedMVC/Views/Shared/_Layout.cshtml
+++ b/Week6/Day3/CommunityShedMVC/CommunityShedMVC/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                     <li class="nav-item">
                         @Html.ActionLink("Communities", "CommunityDetails", "Home")
                     </li>
+                    <li class="nav-item">
+                        @Html.ActionLink("Borrowed Items", "BorrowedItems", "Item")
+                    </li>
                 </ul>
                 @if (Request.IsAuthenticated)
                 {
