--- a/Week6/Day3/CommunityShedMVC/CommunityShedMVC/Views/Item/Delete.cshtml
+++ b/Week6/Day3/CommunityShedMVC/CommunityShedMVC/Views/Item/Delete.cshtml
@@ -12,6 +12,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.OwnerId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.OwnerId)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.ItemName)
         </dt>
 
