Finished create and edit methods for Clients and WorkTypes

--- a/Week7/InvoiceMaker/InvoiceMaker/Views/Clients/Index.cshtml
+++ b/Week7/InvoiceMaker/InvoiceMaker/Views/Clients/Index.cshtml
@@ -8,7 +8,7 @@
 
 @Html.ActionLink("Create Client", "Create", null, new { @class = "pure-button pure-button-primary" })
 
-<table class="pure-table pure-table-bordered">
+<table class="pure-table pure-table-bordered pure-table-horizontal">
     <thead>
         <tr>
             <th>Name</th>
