--- a/Week7/InvoiceMaker/InvoiceMaker/Content/PureStyle.css
+++ b/Week7/InvoiceMaker/InvoiceMaker/Content/PureStyle.css
@@ -24,3 +24,57 @@
 .button-secondary {
     background: rgb(66, 184, 221); /* this is a light blue */
 }
+
+body{
+    background-color: #557A95;
+   
+}
+.white{
+    color: white;
+}
+
+.white:hover{
+    background-color: blueviolet;
+}
+
+
+.content {
+    margin-top: 25px;
+    font-size: 21px;
+    text-align: center;
+
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+            animation: fadein 2s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
