--- a/Week7/InvoiceMaker/InvoiceMaker/Views/WorkTypes/Index.cshtml
+++ b/Week7/InvoiceMaker/InvoiceMaker/Views/WorkTypes/Index.cshtml
@@ -14,6 +14,7 @@
             <th>Name</th>
             <th>Rate ($/hr)</th>
             <th></th>
+            @*<th></th>*@
         </tr>
     </thead>
 
@@ -26,6 +27,9 @@
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { Id = workType.Id }, new { @class = "button-secondary pure-button" })
                 </td>
+                @*<td>
+                    @Html.ActionLink("Delete", "Delete", new { Id = workType.Id }, new { @class = "button-error pure-button" })
+                </td>*@
             </tr>
         }
     </tbody>
