--- a/Week7/InvoiceMaker/InvoiceMaker/Views/Clients/Edit.cshtml
+++ b/Week7/InvoiceMaker/InvoiceMaker/Views/Clients/Edit.cshtml
@@ -10,7 +10,7 @@
 @using (Html.BeginForm("Edit", "Clients", new { Id = Model.Id }, FormMethod.Post, new { @class = "pure-form pure-form-aligned" }))
 {
     @Html.AntiForgeryToken()
-
+    @Html.ValidationSummary()
     <fieldset>
         <div class="pure-control-group">
             @Html.LabelFor(model => model.Name)
