--- a/Week7/InvoiceMaker/InvoiceMaker/Views/WorkTypes/Create.cshtml
+++ b/Week7/InvoiceMaker/InvoiceMaker/Views/WorkTypes/Create.cshtml
@@ -6,7 +6,7 @@
 @using (Html.BeginForm("Create", "WorkTypes", FormMethod.Post, new { @class = "pure-form pure-form-aligned" }))
 {
     @Html.AntiForgeryToken()
-
+    @Html.ValidationSummary()
     <fieldset>
         <div class="pure-control-group">
             @Html.LabelFor(model => model.Name)
