--- a/Week7/InvoiceMaker/InvoiceMaker/Views/WorkTypes/Edit.cshtml
+++ b/Week7/InvoiceMaker/InvoiceMaker/Views/WorkTypes/Edit.cshtml
@@ -11,7 +11,7 @@
 @using (Html.BeginForm("Edit", "WorkTypes", new { Id = Model.Id }, FormMethod.Post, new { @class = "pure-form pure-form-aligned" }))
 {
     @Html.AntiForgeryToken()
-
+    @Html.ValidationSummary()
     <fieldset>
         <div class="pure-control-group">
             @Html.LabelFor(model => model.Name)
