--- a/Week7/InvoiceMaker/InvoiceMaker/Views/Shared/InvoiceMakerLayout.cshtml
+++ b/Week7/InvoiceMaker/InvoiceMaker/Views/Shared/InvoiceMakerLayout.cshtml
@@ -8,7 +8,8 @@
 <body>
 
     <div class="pure-menu pure-menu-horizontal">
-        <a href="#" class="pure-menu-heading pure-menu-link white">Invoice Maker</a>
+        @Html.ActionLink("Invoice Maker", "Index", "Invoices", null, new { @class = "pure-menu-heading pure-menu-link white" })
+       
         <ul class="pure-menu-list">
             <li class="pure-menu-item">@Html.ActionLink("Clients", "Index", "Clients", null, new { @class = "pure-menu-link white" })</li>
             <li class="pure-menu-item">@Html.ActionLink("WorkTypes", "Index", "WorkTypes", null, new { @class = "pure-menu-link white" })</li>
