--- a/Week7/InvoiceMaker/InvoiceMaker/Views/WorkDone/Index.cshtml
+++ b/Week7/InvoiceMaker/InvoiceMaker/Views/WorkDone/Index.cshtml
@@ -26,7 +26,20 @@
                 <td>@workDone.ClientName</td>
                 <td>@workDone.WorkTypeName</td>
                 <td>@workDone.StartedOn</td>
-                <td>@workDone.EndedOn</td>
+                <td>
+                    @if (workDone.EndedOn != null)
+                    {
+                        @workDone.EndedOn
+                    }
+                    else
+                    {
+                        using (Html.BeginForm("Finish", "WorkDone", new { id = workDone.Id }, FormMethod.Post, new { @class = "pure-form pure-form-aligned" } ))
+                        {
+                            @Html.AntiForgeryToken()
+                            <button type="submit" class="pure-button button-warning">Finish</button>
+                        }
+                    }
+                </td>
                 <td>@workDone.GetTotal()</td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { Id = workDone.Id }, new { @class = "button-secondary pure-button" })
